# lifeSimulation

./: .gitignore  CMakeLists.txt  Projeto_Life.mind  README.md
data/: conf1.txt  conf2.txt  conf3.txt  es0.txt  esm1.txt
img/: life.txt  log.txt
include/: commonLife.h  lifeConfig.h  lifeSimulatio.h  lifeSimulation.h  logLife.h
include/canvas/: canvas.h  canvas_Life.h  commonCanvas.h
src/: canvas.cpp  canvas_Life.cpp  lifeConfig.cpp  lifeGame.cpp  lifeSimulation.cpp  lodepng.cpp  logLife.cpp  simulation.cpp  simulation_driver.cpp
